# dayone-verify

./: .gitignore  PROXIMOS_PASSOS.md  README.md  data.json  data_full.json  fl_sem_documento.csv  import_supabase.py  index.html  package.json
api/: companies.js  mark-used.js  pdf.js  unmark-used.js
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_schema.py  0002_seed_app_settings.py  0003_add_idempotency_indexes.py  0004_add_legacy_protection_trigger.py  0005_state_machines_and_dedup.py  0006_add_ready_no_pdf_status.py  0007_rls_rpcs_add_ready_no_pdf.py  0008_add_owner_name_fields.py  0009_enable_rls_alembic_version.py  0010_add_released_to_client.py
backend/app/: main.py  worker.py
backend/app/core/: config.py  db.py  logging.py  storage.py
backend/app/domain/: models.py
backend/app/providers/documents/: base.py  manual_upload.py  stubs.py
backend/app/scripts/: crawl_ca_websites.py  import_fl_companies.py  ingest_alto_companies.py  release_companies.py
backend/app/services/: ca_readiness.py  crawler.py  dedup.py  email_extractor.py  matching.py  si_parser.py  ssrf_guard.py  state_machines.py  stock.py
backend/app/services/fl_import/: importer.py  parsers.py
backend/tests/: test_ca_readiness.py  test_ca_readiness_nopdf.py  test_crawler.py  test_dedup.py  test_document_provider.py  test_email_extractor.py  test_fl_import.py  test_fl_parsers.py  test_matching.py  test_si_parser.py  test_ssrf_guard.py  test_state_machines.py
(+1 files in other folders)
