[project]
name = "dayone-verify-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic-settings>=2.3",
    "boto3>=1.34",
    "phonenumbers>=8.13",
    "dnspython>=2.6",
    "rapidfuzz>=3.9",
    "python-json-logger>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
